tests/scripts/errors/parse/missing_then_block.cdo
IF TRUE
    print("no block");
